# context-engine

./: .env.example  .gitignore  LICENSE  README.md  mcp_config_example.json  mcp_server.py  models.py  pyproject.toml
assembler/: __init__.py  compressor.py  context_builder.py  smart_truncate.py  token_budget.py
cli/: main.py
indexer/: crawler.py  embedder.py  graph_builder.py  parser.py  watcher.py
llm/: client.py
llm/adapters/: base.py  claude.py  gemini.py  openai.py
query/: __init__.py  heuristic_understanding.py  understanding.py
retriever/: graph_traversal.py  semantic_search.py
storage/: index_store.py
tests/: test_cold_filtering.py  test_compressor.py  test_context_builder.py  test_graph_builder.py  test_heuristic_understanding.py  test_mcp_server.py  test_multi_focal.py  test_parser.py  test_parser_js.py  test_semantic_search.py  test_watcher.py
tests/fixtures/js_project/: api.tsx  user.ts  utils.js
tests/fixtures/sample_project/: api.py  auth.py  database.py
tests/fixtures/sample_react_project/: .gitignore
tests/fixtures/sample_react_project/api/: auth.js
tests/fixtures/sample_react_project/components/: Auth.jsx  Dashboard.jsx
tests/fixtures/sample_react_project/hooks/: useAuth.js
